ISSUE: Redmine 710 PURPOSE: Redesigned accession search, placeholders not readable DESCRIPTION: setting an opacity on placeholder style to.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1290,6 +1290,7 @@ input::placeholder {
 	line-height: 1.5em;
 	color: darkgrey;
 	font-size: 14px;
+	opacity: 0.9;
 }
 .data-entry-input:focus {
 	color: #495057;
